<resources>
    <string name="app_name">Z-RideDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="waiting">Thanks for your Request. We Get back to You Shortly</string>
    <string name="place">Dhaka</string>
    <string name="payment">Payment</string>
    <string name="payment_module">Payment Module</string>
    <string name="pick">Pick</string>
    <string name="drop">Drop</string>
    <string name="registration">Registration</string>
    <string name="signin">Sign In</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="start_point">Start Point</string>
    <string name="destination">Destination</string>
    <string name="start_time">Start Time</string>
    <string name="time_frame">Time Frame(minutes)</string>
    <string name="submit">Submit</string>
    <string name="fare">Fair</string>
    <string name="total_fair">Total Fair:</string>
    <string name="demo">Demo</string>
    <string name="basket">Basket</string>
    <string name="total_fare">Total Fare:</string>
    <string name="service_location">Service Location</string>
    <string name="services">Services</string>
    <string name="new_request">New Ride Request</string>
    <string name="ride_details">View Ride Details</string>
    <string name="set">SET</string>
    <string name="cancel">CANCEL</string>
    <string name="name">Name:</string>
    <string name="contact">Contact:</string>
    <string name="rate">Rate:</string>
    <string name="driver">Driver</string>
    <string name="type">Type:</string>
    <string name="model">Model:</string>
    <string name="vehicle_no">Vehicle No:</string>
    <string name="vehicle_info">Vehicle Info</string>
    <string name="end">Thanks for be with us. Have a Safe Journey</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <!-- strings related to parse task -->
    <string name="pick_drop_class">pick_drop_class</string>
    <string name="start_point_list">Start Point</string>
    <string name="destination_point_list">Destination Point</string>
    <string name="fair_calculation">Calculated Fair</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_out_short">Sign Out</string>


    <string-array name="place_list">
        <item>Dhaka</item>
    </string-array>
    <string-array name="service_list">
        <item>Pick/Drop</item>
    </string-array>
    <string-array name="months">
        <item>Select</item>
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
    <string-array name="time_frame">
        <item>Select</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>

    <integer-array name="mm">
        <item>00</item>
        <item>30</item>
    </integer-array>

    <string-array name="start_destination">
        <item>Select</item>
        <item>list</item>
        <item>will</item>
        <item>fetch</item>
        <item>from</item>
        <item>server</item>
    </string-array>


</resources>
